--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  server: 
+  backend: 
     build: ./back
     container_name: backend
     ports:
@@ -15,9 +15,9 @@ services:
     build: ./sender
     container_name: sender
     depends_on:
-      - server
+      - backend
     environment:
-      - SERVER_URL=http://server:5000  
+      - SERVER_URL=http://backend:5000  
     networks:
       - traffic-network
 
@@ -27,7 +27,7 @@ services:
     ports:
       - "3000:80"
     depends_on:
-      - server
+      - backend
     networks:
       - traffic-network
 
